sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:4: error: type mismatch;
 found   : Unit
 required: Boolean
	while (i=getNombreValeurs()) {
                ^AlgGnomeSort:5: error: type mismatch;
 found   : Unit
 required: Boolean
		if (i=0) {
                     ^